# meditreat

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.keycloak  README.md  compose.yaml  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yaml
api/: chatbot.py  main.py  models.py
api/prompts/: agent.txt
src/: main.py
src/core/: base.py
src/llms/: factory.py  models.py
src/memory/: supabase.py
src/models/: api.py  supabase.py
src/prompts/: base_system_prompt.txt
src/utils/: config.py  messages.py  serialization.py  types.py
