[project]
name = "meditreat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.5",
    "fastapi[all]>=0.116.1",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "mem0ai>=0.1.117",
    "pre-commit>=4.3.0",
    "python-decouple>=3.8",
    "supabase>=2.18.1",
    "websockets>=15.0.1",
]
